Slightly modify commands